--- a/client/package.json
+++ b/client/package.json
@@ -48,13 +48,16 @@
     "@types/qrcode": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "autoprefixer": "^10.4.23",
     "babel-loader": "^10.0.0",
     "babel-plugin-istanbul": "^7.0.1",
     "cypress": "^15.7.1",
     "eslint": "^9.29.0",
+    "postcss": "^8.5.6",
     "stylelint": "^16.20.0",
     "stylelint-config-standard": "^38.0.0",
     "stylelint-scss": "^6.12.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.8.2",
     "typescript-eslint": "^8.34.0"
   }
