--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "cypress-axe": "1.7.0",
     "franc-min": "^6.2.0",
     "glob": "^11.0.3",
+    "ngx-material-timepicker": "^13.1.1",
     "ngx-print": "^20.0.0",
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
