--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "franc-min": "^6.2.0",
     "glob": "^11.0.3",
     "libphonenumber-js": "^1.12.36",
+    "ngx-material-timepicker": "^13.1.1",
     "ngx-print": "^20.0.0",
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
